[package]
name = "bevy_http"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-core = "0.3.29"
surf = "2.3.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "^0.12"
default-features = false
features = ["bevy_asset"]
